--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>I ❤️ You — Proposal</title>
+  <title>adivamsi</title>
   <style>
     :root{
       --bg1: #0f172a; /* deep indigo */
@@ -311,3 +311,4 @@
   </script>
 </body>
 </html>
+
